# connectedhomeip

./: all_clusters_default.sh  build_all_clusters_linux.sh  cert_tests.sh  cert_tests_run.sh  chip_tool_default.sh  group_key_mgmt.plantuml  ota_model.py  roboto2.py
data_model/clusters/: DiscoBallCluster-DiscoBall.xml  DiscoBallCluster-SuperDiscoBall.xml
docs/: clusters.md
examples/disco-ball-app/linux/: BUILD.gn  README.md  main.cpp
examples/google-multi-device/: README.md
examples/google-multi-device/device-common/: BUILD.gn  google-multi-device.matter  google-multi-device.zap
examples/google-multi-device/device-common/attestation/: Matter-Development-DAC-6006-FFFE-Cert.der  Matter-Development-DAC-6006-FFFE-Cert.pem  Matter-Development-DAC-6006-FFFE-Cert2.der  Matter-Development-DAC-6006-FFFE-Cert2.pem  Matter-Development-DAC-6006-FFFE-Key.der  Matter-Development-DAC-6006-FFFE-Key.pem  Matter-Development-DAC-6006-FFFE-Key2.der  Matter-Development-DAC-6006-FFFE-Key2.pem  Matter-Development-PAI-6006-noPID-Cert.der  Matter-Development-PAI-6006-noPID-Cert.pem  Matter-Development-PAI-6006-noPID-Key.der  Matter-Development-PAI-6006-noPID-Key.pem  dacs.py
examples/google-multi-device/device-common/include/: DefaultGenericSwitchStateMachineDriver.h  GenericSwitchStateMachine.h  GoogleMultiDeviceAttestationProvider.h  GoogleMultiDeviceCommon.h  GoogleMultiDeviceDishwasherOpstate.h  GoogleMultiDeviceInfoProvider.h
examples/google-multi-device/device-common/src/: GenericSwitchStateMachine.cpp  GoogleMultiDeviceCommon.cpp  GoogleMultiDeviceDishwasherOpstate.cpp
examples/google-multi-device/silabs/: BUILD.gn  build_for_wifi_args.gni  openthread.gni
examples/google-multi-device/silabs/data_model/: lighting-thread-app.matter  lighting-wifi-app.matter
examples/google-multi-device/silabs/include/: AppConfig.h  AppEvent.h  AppTask.h  CHIPProjectConfig.h  MultiDeviceDriver.h
examples/google-multi-device/silabs/src/: AppTask.cpp  MultiDeviceDriver.cpp  ZclCallbacks.cpp
scripts/: matter_payloads_tool.py  rules.matterlint
src/: group_key_set_interface.h
src/app/: AttributeAccessInterface.h  AttributePathExpandIterator.cpp  AttributePathParams.h  BUILD.gn  CASESessionManager.cpp  CommandSender.cpp  GlobalAttributes.h  OperationalSessionSetup.cpp  TestEventTriggerDelegate.h  WriteHandler.h  chip_data_model.gni  zap_cluster_list.json
src/controller/: CHIPDeviceController.cpp  CHIPDeviceControllerFactory.cpp  ExampleOperationalCredentialsIssuer.cpp  ExampleOperationalCredentialsIssuer.h
src/credentials/: BUILD.gn  DeviceAttestationVerifier.cpp  DeviceAttestationVerifier.h  FabricTable.cpp  FabricTable.h  GroupDataProvider.h  LocalCertificateAuthority.h  OperationalCertificateStore.h  PersistentStorageOpCertStore.cpp  PersistentStorageOpCertStore.h  StaticGroupDataProvider.cpp  TestOnlyLocalCertificateAuthority.h
src/crypto/: BUILD.gn  CHIPCryptoPALOpenSSL.cpp  OperationalKeystore.h
src/inet/: BUILD.gn  EndpointQueueFilter.h  UDPEndPoint.cpp  UDPEndPointImplLwIP.cpp  UDPEndPointImplLwIP.h
src/messaging/: ExchangeMgr.cpp
src/platform/: BUILD.gn
src/python_testing/: TC_DA_1_7.py  TC_DeviceBasicComposition.py  TC_OCC_3_1.py  TC_OCC_3_2.py  TC_OPCREDS_3_8.py  TC_OPCREDS_3_9.py  TC_RR_1_1.py  TC_SC_3_6.py  device_state_listener.py  esp32_matter_midi.py  otannenbaum.mid  (+4 more)
(+282 files in other folders)
