# Copyright (c) 2023 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

import("${chip_root}/build/chip/tools.gni")
import("${chip_root}/src/app/common_flags.gni")
import("${chip_root}/third_party/imgui/imgui.gni")

assert(chip_build_tools)

import("${chip_root}/examples/common/pigweed/pigweed_rpcs.gni")

if (chip_enable_pw_rpc) {
  import("//build_overrides/pigweed.gni")
  import("$dir_pw_build/target_types.gni")
}

config("includes") {
  include_dirs = [
    ".",
    "include",
  ]
}

declare_args() {
  pi_disco_ball = 1
}

executable("disco-ball-app") {
  sources = [
    "include/CHIPProjectAppConfig.h",
    "main.cpp",
  ]

  deps = [
    "${chip_root}/examples/disco-ball-app/disco-ball-common",
    "${chip_root}/examples/platform/linux:app-main",
    "${chip_root}/src/lib",
    "${chip_root}/third_party/jsoncpp",
  ]

  include_dirs = [ "include" ]
  if (pi_disco_ball == 1) {
    libs = [ "pigpiod_if2" ]
  }
  defines = [ "PI_DISCO_BALL=${pi_disco_ball}" ]

  # The system_rpc_server.cc file is in pigweed and doesn't compile with
  # -Wconversion, remove check for RPC build only.
  cflags = [ "-Wconversion" ]

  output_dir = root_out_dir
}

group("linux") {
  deps = [ ":disco-ball-app" ]
}

group("default") {
  deps = [ ":linux" ]
}
