# Copyright (c) 2024 Google, All rights reserved

import("//build_overrides/chip.gni")
import("${chip_root}/src/app/chip_data_model.gni")
import("${chip_root}/src/platform/device.gni")

config("config") {
  include_dirs = [ "include" ]
}

chip_data_model("google-multi-device-common") {
  zap_file = "google-multi-device.zap"
  is_server = true
}

source_set("product-specialization") {
  deps = [
    "${chip_root}/src/credentials",
    "${chip_root}/src/crypto",
    "${chip_root}/src/lib",
  ]
  public_configs = [ ":config" ]
  sources = [
    "include/GoogleMultiDeviceAttestationProvider.h",
    "include/GoogleMultiDeviceCommon.h",
    "include/GoogleMultiDeviceInfoProvider.h",
    "src/GoogleMultiDeviceCommon.cpp",
  ]
  defines = [ "GOOGLE_DEVICE_HARDWARE=\"GMD-${chip_device_platform}\"" ]
}
