# Copyright (c) 2024 Google, all rights reserved
#

import("//build_overrides/chip.gni")
import("${chip_root}/config/standalone/args.gni")

silabs_sdk_target = get_label_info(":sdk", "label_no_toolchain")
chip_enable_openthread = false
import("${chip_root}/src/platform/silabs/wifi_args.gni")

chip_enable_read_client = false

chip_enable_ota_requestor = false
app_data_model = "${chip_root}/examples/google-multi-device/device-common:google-multi-device-common"
